# RustToBokeh

./: .gitignore  .impeccable.md  CLAUDE.md  Cargo.toml  README.md  build.rs  output.html  requirements.txt
.cargo/: config.toml
.github/workflows/: rust.yml
output/: annual-review.html  box-plot-demo.html  budget-management.html  chart-customisation.html  chart-customization.html  correlation.html  cost-optimization.html  customer-insights.html  density-demo.html  executive-summary.html  expense-analysis.html  financial-health.html  forecast-targets.html  growth-indicators.html  histogram-demo.html  market-position.html  marketing-roi.html  module-showcase.html  monthly.html  operations-dashboard.html  pie-donut-charts.html  product-analysis.html  project-portfolio.html  quarterly-performance.html  quarterly.html  range-tool-demo.html  regional-breakdown.html  revenue-overview.html  team-metrics.html  time-series-events.html  web-analytics.html  workforce-planning.html
python/: render.py
scripts/: fetch_bokeh_js.sh  setup_vendor.ps1  setup_vendor.sh
src/: charts.rs  dashboard.rs  error.rs  handle.rs  lib.rs  main.rs  modules.rs  pages.rs  prelude.rs  python_config.rs  render.rs  stats.rs
src/bokeh_native/: axis.rs  document.rs  figure.rs  html.rs  html_css_scripts.rs  mod.rs  modules_html.rs  nav.rs  page.rs  placeholder.rs  source.rs  verifier.rs
src/bokeh_native/charts/: box_plot.rs  density.rs  grouped_bar.rs  hbar.rs  histogram.rs  (+4 more)
src/charts/: mod.rs
src/render/: chart_config.rs  mod.rs  module.rs
templates/: chart.html
tests/: dashboard_output.rs
(+22 files in other folders)
